objects/Category__x.object
<CustomObject>
    <externalDataSource>Product_Catalog</externalDataSource>
    <externalName>northwind.category</externalName>
    <fields>
        <fullName>Categoryid__c</fullName>
        <externalDeveloperName>categoryid</externalDeveloperName>
        <label>Category ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categoryname__c</fullName>
        <externalDeveloperName>Categoryname</externalDeveloperName>
        <label>Category Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Category</label>
    <pluralLabel>Categories</pluralLabel>
</CustomObject>